fixes typing… message overlap. [resolves #2]

--- a/userstyle.css
+++ b/userstyle.css
@@ -12,7 +12,7 @@
 /* chat window */
 
 #chat li[class*='message'] { padding: 3px !important }
-
+#chat li[class*='message']:last-child { padding-bottom: 1.538em !important; }
 
 /* inbox */
 
